--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 
     <div id="logoSection" class="container" style="display: none;">
       <img src="KU5-1-1024x406.png" alt="KU Logo" class="logo-img" />
+  <!--   <img src="CHMTEST44.png" alt="KU Logo" class="logo-img" style="opacity: 90%;" /> -->
     </div>
     <div class="display-card">
     <div class="date" id="date">วันจันทร์ 1 มกราคม พ.ศ. 2568</div>
@@ -156,7 +157,7 @@
     <div class="clock" id="clock">00:00:00</div>
     </div>
     <div>
-      <h1>ห้องสอบ LH3-331</h1>
+      <h1>ห้อง LH3-331</h1>
     </div>
     <div class="section-row">
       <h2 class="course" id="subjectDisplay"> ปฏิบัติการเคมีทั่วไป </h2>
@@ -212,7 +213,7 @@
               document.getElementsByTagName('h2')[1].textContent = ' ' + courseCode;
           }
           if (room) {
-              document.getElementsByTagName('h1')[0].innerHTML = 'ห้องสอบ ' + room;
+              document.getElementsByTagName('h1')[0].innerHTML = 'ห้อง ' + room;
           }
           if (timeout) {
               document.getElementsByTagName('h3')[0].innerHTML = timeout;
